install prettier, lint-staged, husky 5

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "node-sass -w src/resources/scss/app.scss src/public/css/app.css",
-    "beautiful": "lint-staged"
+    "beautiful": "lint-staged",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -18,13 +19,8 @@
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --tab-width 4 --trailing-comma all --write"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "devDependencies": {
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "lint-staged": "^12.4.1",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
